# conda-self

./: .authors.yml  .gitignore  .mailmap  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  environment-dev.yml  environment-docs.yml  pyproject.toml  rever.xsh
.github/ISSUE_TEMPLATE/: 0_bug.yaml  1_feature.yaml  2_documentation.yaml
.github/PULL_REQUEST_TEMPLATE/: 4_pr.yaml
.github/templates/: 0_bug.yaml  2_documentation.yaml
.github/workflows/: build.yml  docs.yml  tests.yml
conda_self/: constants.py  exceptions.py  health_check.py  install.py  package_info.py  plugin.py  query.py  reset.py  testing.py  validate.py
conda_self/cli/: __init__.py  main_fix_base.py  main_install.py  main_migrate.py  main_protect.py  main_remove.py  main_reset.py  main_update.py
conda_self/cli/plugins/: __init__.py  main_list.py
conda_self/health_checks/: __init__.py  base_protection.py
demos/: base-protection.tape  install-plugin.tape  quickstart.tape  remove.tape  reset.tape  update.tape
docs/: conf.py  configuration.md  features.md  index.md  motivation.md  quickstart.md
docs/guides/: custom-channels.md  resetting-base.md
docs/reference/: cli.md
docs/tutorials/: managing-plugins.md  protecting-base.md
news/: 121-installer-updated  121-installer-updates  127-force-remove  17-correct-help  78-update-all  82-bump-min-python-310  83-add-reset  84-update-deps  90-add-canary-builds  fix-base-health-fix  fix-base-task  migrate-base.md
recipe/: meta.yaml
scripts/: docs.bat  docs.sh  lint.bat  lint.sh  setup.bat  setup.sh  test.bat  test.sh
tests/: conftest.py  test_cli_fix.py  test_cli_install.py  test_cli_migrate.py  test_cli_plugins_list.py  test_cli_remove.py  test_cli_reset.py  test_cli_update.py  test_health_check_base_protection.py  test_package_info.py  test_query.py
