[build-system]
requires = ["hatchling>=1.12.2", "hatch-vcs>=0.2.0"]
build-backend = "hatchling.build"

[project]
name = "conda-self"
description = "A self command for conda"
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
  # "conda >=24.5.0",
]
dynamic = ["version"]

[project.urls]
documentation = "https://conda-incubator.github.io/conda-self"
repository = "https://github.com/conda-incubator/conda-self"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "conda_self/_version.py"

[project.entry-points.conda]
"conda-self" = "conda_self.plugin"


[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
omit = ["conda_self/_version.py"]
show_missing = true
skip_covered = true
sort = "Miss"

[tool.mypy]
warn_no_return = false
exclude = "docs/.*"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
flake8-type-checking = {exempt-modules = [], strict = true}
# see https://docs.astral.sh/ruff/rules/
select = [
  # "D1",  # pydocstyle
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "FA",  # flake8-future-annotations
  "I",  # isort
  "ISC",  # flake8-implicit-str-concat
  "RUF100",  # Unused noqa directive
  "T10",  # flake8-debugger
  "TCH",  # flake8-type-checking
  "UP",  # pyupgrade
  "W",  # pycodestyle warnings
]
